# jtorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
lib/: jtorch.ts
lib/tensor/: index.ts  tensor.ts  tensorOptions.ts
src/: jtorch.cpp  node_api.h
src/tensor/: creation.cpp  creation.h  tensor.cpp  tensor.h  tensors.cpp  tensors.h  utils.cpp  utils.h
test/: test_jtorch.js  test_jtorch.spec.ts
